Update QueryUtil and QueryUtilTest